--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
 		"install": "cd server && npm i && cd ../client && npm i",
 		"seed": "cd server && npm run seed",
 		"build": "cd client && npm run build",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"generate": "graphql-codegen"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.0",
+		"@graphql-codegen/client-preset": "^4.1.0",
+		"@graphql-typed-document-node/core": "^3.2.0",
 		"concurrently": "^8.2.2"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"graphql": "^16.8.1",
 		"typescript": "^5.2.2"
 	}
 }
