--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mui/material": "^5.15.6",
 		"@types/date-fns": "^2.6.0",
 		"date-fns": "^3.2.0",
 		"react": "^18.2.0",
