--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"graphql": "^16.8.1",
+		"styled-components": "^6.1.8",
 		"typescript": "^5.2.2"
 	}
 }
