--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "graphql-mongodb-netflify-function",
+	"name": "securities-log-api",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
