--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = 'npm run build'
   publish='client/dist'
-  functions = 'server/lambda/dist'
+  functions = 'server/lambda/dist/bundle'
