--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
 	"name": "securities-log-api",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "index.ts",
 	"scripts": {
 		"watch": "nodemon",
-		"start": "ts-node index.ts",
+		"start": "nodemon",
 		"build:lambda": "npm run bundle && tsc -p lambda/tsconfig.json",
 		"codegen": "graphql-codegen --config codegen.yml",
 		"bundle": "ncp ./src ./lambda/bundle",
