--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"install": "cd functions && npm i && cd ../client && npm i",
 		"seed": "cd server && npm run seed",
 		"build": "cd functions && npm run build && cd ../client && npm run build",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
 		"concurrently": "^8.2.2"
