--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,6 @@
 
 [functions]
   directory = "functions/netlify/functions"
-  included_files = ["actions/index.ts"]
+  included_files = ["actions/index.js"]
 
 
