--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.0.1",
     "styled-components": "^6.1.8",
     "victory": "^36.8.6",
-    "victory-area": "^36.8.6"
+    "victory-area": "^36.8.6",
+    "vite-plugin-pwa": "^0.19.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
