--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "markdown-handler",
+	"name": "node-express-mongo-function",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
