--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-	"name": "",
+	"name": "journal-logger",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
 	"scripts": {
 		"develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
 		"dev": "cd client && npm run build && cd ../server && npm run build && netlify dev",
