--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.9.7",
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.7",
