--- a/client/.gitignore
+++ b/client/.gitignore
@@ -23,3 +23,47 @@ dist-ssr
 *.sln
 *.sw?
 codegen.ts
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vercel
+lambda/bundle
+lambda/dist
+codegen.yml
+
+
+
+# Local Netlify folder
+.netlify
+dist
+
+netlify/functions/actions/*.js
+netlify/functions/actions/*.js.map
+netlify/functions/actions/mongo/*.js
+netlify/functions/actions/mongo/*.js.map
+
+
+netlify.toml
+
+
