--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-		"dev": "cd client && npm run build && cd ../server && npm run build && netlify dev",
-		"install": "cd functions && npm i && cd ../client && npm i",
+		"dev": "cd client && npm run build && netlify dev",
+		"install": "cd client && npm i",
 		"seed": "cd server && npm run seed",
-		"build": "cd functions && npm run build && cd ../client && npm run build",
+		"build": "cd client && npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
