--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+codegen.ts
+
 
 # dependencies
 /node_modules
@@ -13,7 +38,7 @@
 
 # misc
 .DS_Store
-
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,6 +47,23 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-cod
+.vercel
+lambda/bundle
+lambda/dist
+codegen.yml
+
+
+
 # Local Netlify folder
 .netlify
+dist
+
+netlify/functions/actions/*.js
+netlify/functions/actions/*.js.map
+netlify/functions/actions/mongo/*.js
+netlify/functions/actions/mongo/*.js.map
+
+
+netlify.toml
+
+
