--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-	"name": "journal-logger",
-	"version": "1.0.0",
-	"description": "",
+	"name": "daily-journal-app",
+	"private": true,
+	"version": "2.0.0",
+	"type": "module",
 	"scripts": {
-		"dev": "cd client && npm run build && netlify dev",
-		"install": "cd client && npm i",
-		"seed": "cd server && npm run seed",
-		"build": "cd client && npm run build",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"compile": "graphql-codegen",
+		"watch": "graphql-codegen -w",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.9.7",
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/material": "^5.15.7",
+		"@mui/styled-engine-sc": "^6.0.0-alpha.14",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.0",
+		"react-icons": "^5.0.1",
+		"styled-components": "^6.1.8",
+		"victory": "^36.8.6",
+		"victory-area": "^36.8.6",
+		"vite-plugin-pwa": "^0.19.2"
 	},
 	"devDependencies": {
-		"concurrently": "^8.2.2"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"dependencies": {
-		"typescript": "^5.2.2"
+		"@graphql-codegen/cli": "^5.0.2",
+		"@graphql-codegen/client-preset": "^4.2.2",
+		"@graphql-codegen/typescript": "^4.0.4",
+		"@graphql-codegen/typescript-operations": "^4.1.2",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@types/react": "^18.2.43",
+		"@types/react-dom": "^18.2.17",
+		"@typescript-eslint/eslint-plugin": "^6.14.0",
+		"@typescript-eslint/parser": "^6.14.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.55.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.8"
 	}
 }
