--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.7",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.14",
+		"marked": "^12.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-icons": "^5.0.1",
+		"react-router-dom": "^6.22.3",
 		"styled-components": "^6.1.8",
 		"victory": "^36.8.6",
 		"victory-area": "^36.8.6",
